# anaconda-auth

./: .env-template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment-dev.yml  example_anaconda_config.toml  example_condarc  pyproject.toml  pyrightconfig.json  test_cases.md  test_script.sh
.github/workflows/: ci-anaconda-cloud-auth.yml  pre-commit.yaml  release.yml  test.yml
__tests__/: README.md  conftest.py  setup.cfg
__tests__/cli_tests/: test_anaconda_auth_api_key.py  test_anaconda_auth_logout.py  test_anaconda_auth_whoami.py  test_anaconda_login.py  test_anaconda_token_install.py  test_anaconda_token_install_reject_condarc.py  test_anaconda_token_install_reject_token.py
__tests__/src/common/: cli_utils.py  conda_helper.py  defaults.py
__tests__/tests/: test_config.py
conda.recipe/: meta.yaml
docs/source/: conf.py
examples/: panel-auth.py
libs/anaconda-cloud-auth/: .env-template  .pre-commit-config.yaml  README.md  catalog-info.yaml  environment-dev.yml  mkdocs.yml  pyproject.toml
libs/anaconda-cloud-auth/.github/workflows/: ci-anaconda-cloud-auth.yml  update-build-lock-file.yml
libs/anaconda-cloud-auth/conda.recipe/: meta.yaml
libs/anaconda-cloud-auth/docs/: index.md
libs/anaconda-cloud-auth/examples/: panel-auth.py
libs/anaconda-cloud-auth/src/anaconda_cloud_auth/: __init__.py  actions.py  cli.py  client.py  config.py  console.py  exceptions.py  handlers.py  jwt.py  plugins.py  token.py
libs/anaconda-cloud-auth/src/anaconda_cloud_auth/_conda/: auth_handler.py
libs/anaconda-cloud-auth/tests/: conftest.py  test_auth.py  test_cli.py  test_client.py  test_conda_plugins.py  test_config.py  test_token.py
src/anaconda_auth/: __init__.py  actions.py  adapters.py  async_client.py  cli.py  client.py  config.py  device_flow.py  env_logger.py  environments.py  exceptions.py  handlers.py  panel.py  qr_code.py  quickstart.py  repo.py  telemetry.py  token.py  utils.py
src/anaconda_auth/_conda/: auth_handler.py  cli.py  conda_api.py  condarc.py  config.py  entrypoint.py  env_logger_config.py  environments_config.py  patches.py  plugins.py  repo_config.py
src/anaconda_auth_old/: __init__.py  actions.py  client.py  config.py  exceptions.py  handlers.py  token.py
src/anaconda_cloud_auth/: actions.py  cli.py  client.py  config.py
tests/: conftest.py  test_adapters.py  test_async.py  test_auth.py  test_cli.py  test_client.py  test_conda_plugins.py  test_config.py  test_config_with_conda.py  test_device_flow.py  test_env_logger.py  test_env_logger_config.py  test_environments.py  test_handler.py  test_imports.py  test_quickstart.py  test_repo.py  test_sites_cli.py  test_token.py
tests/conda_token/: conftest.py  test_cli.py  test_conda.py  test_condarc.py  test_token.py  test_token_cli.py  testing_server.py
